--- a/notebooks/All Classes DL Models_Merged_Description.ipynb
+++ b/notebooks/All Classes DL Models_Merged_Description.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_excel('./data/cleaned_data.xlsx')\n",
+    "dataset = pd.read_excel('./data/preprocessed_data.xlsx')\n",
     "dataset.sample(10)"
    ]
   },
